<resources>
    <string name="app_name">Laboratorio4</string>
    <string name="about">about</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="description">description</string>
    <string name="home">home</string>
    <string name="start">Start</string>
    <string name="txtHeader">Zvent Organizing App\nsupport@zvent.com</string>
    <string name="deny_invitation">Deny Invitation</string>
    <string name="confirm_invitation">Confirm Invitation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_el_correo_eletr_nico">Ingrese el correo eletrónico</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="seleccione_el_rol">Seleccione el rol</string>
    <string name="ingrese_el_tel_fono">Ingrese el teléfono</string>
    <string name="seleccione_el_rol1">Seleccione el rol</string>
    <string name="porfavor_seleccione_el_rol">Seleccione un rol por favor</string>
    <string name="registrar">Registro</string>
    <string name="guests">Invitados</string>
    <string name="registrados">Registrados</string>
    <string name="restart">Reiniciar</string>
    <string name="ver">Ver Invitados</string>
</resources>
