<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable type="com.example.laboratorio4.User"
            name="user"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:hint="@string/ingrese_el_correo_eletr_nico"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:hint="@string/ingrese_el_tel_fono"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:hint="@string/ingrese_el_nombre"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerRol"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
