<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModelFragments.AddGuestFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable type="com.example.laboratorio4.User"
            name="user"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewModelFragments.AddGuestFragment">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="134dp"
            android:layout_height="25dp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="246dp"
            android:layout_marginRight="246dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:hint="@string/ingrese_el_correo_eletr_nico"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:hint="@string/ingrese_el_tel_fono"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="350sp"
            android:layout_height="25sp"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:hint="@string/ingrese_el_nombre"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
